--- a/templates/head.html.twig
+++ b/templates/head.html.twig
@@ -4,7 +4,7 @@
     <meta name="description" content="Download the best Creative Portfolio HTML Template in 2018" />
     <meta name="author" content="ClaPat Studio">
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/ico" href="favicon.ico" />
+{#    <link rel="icon" type="image/ico" href="favicon.ico" />#}
     <link href="{{ asset('css/style.css') }}" rel="stylesheet" />
     <link href="{{ asset('css/font-awesome.min.css') }}" rel="stylesheet" />
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300' rel='stylesheet' type='text/css'>
